--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,3 @@
-
 buildscript {
     repositories {
         jcenter()
@@ -28,9 +27,11 @@ android {
 
 repositories {
     mavenCentral()
+    flatDir { dirs 'libs' }
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
+    implementation "com.facebook.react:react-native:+"
+    implementation fileTree(dir: "libs", include: ["*.aar"])
 }
   
