--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
-
 {
-  "name": "react-native-gzdsx-alipay",
-  "version": "1.0.0",
-  "description": "alipay for react-native",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "react-native"
-  ],
-  "author": "songdewei@163.com",
-  "license": "MIT",
-  "devDependencies": {
-    "react-native": "^0.63.0",
-    "react-native-windows": "^0.63.0"
-  }
+    "name": "react-native-gzdsx-alipay",
+    "version": "1.0.0",
+    "description": "alipay for react-native",
+    "main": "index.js",
+    "types": "index.d.ts",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [
+        "react-native"
+    ],
+    "author": "songdewei@163.com",
+    "license": "MIT",
+    "devDependencies": {
+        "react-native": "^0.63.0",
+        "react-native-windows": "^0.63.0"
+    }
 }
